Start data collector integration

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -204,6 +204,8 @@ build.json @home-assistant/supervisor
 /tests/components/daikin/ @fredrike
 /homeassistant/components/darksky/ @fabaff
 /tests/components/darksky/ @fabaff
+/homeassistant/components/data_collector/ @CrowdSourcerer
+/tests/components/data_collector/ @CrowdSourcerer
 /homeassistant/components/debugpy/ @frenck
 /tests/components/debugpy/ @frenck
 /homeassistant/components/deconz/ @Kane610
