--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -39,5 +39,10 @@
       "!include_dir_merge_list scalar",
       "!include_dir_merge_named scalar"
     ]
+  },
+  "build": {
+    "args": {
+      "network": "host"
+    }
   }
 }
