--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -1371,6 +1371,9 @@ scapy==2.4.5
 # homeassistant.components.screenlogic
 screenlogicpy==0.5.4
 
+# homeassistant.components.data_collector
+scrubadub==2.0.0
+
 # homeassistant.components.backup
 securetar==2022.2.0
 
