--- a/homeassistant/components/data_collector/manifest.json
+++ b/homeassistant/components/data_collector/manifest.json
@@ -3,7 +3,7 @@
   "name": "Crowdsourcerer",
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/data_collector",
-  "requirements": ["scrubadub==2.0.0"],
+  "requirements": ["cs_scrubadub==2.0.2"],
   "codeowners": ["@CrowdSourcerer", "@Inryatt", "@diomont"],
   "iot_class": "cloud_polling",
   "version": 0.6
