--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2112,7 +2112,7 @@ schiene==0.23
 screenlogicpy==0.5.4
 
 # homeassistant.components.data_collector
-scrubadub==2.0.0
+cs_scrubadub==2.0.2
 
 # homeassistant.components.scsgate
 scsgate==0.1.0
