--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -2112,7 +2112,7 @@ schiene==0.23
 screenlogicpy==0.5.4
 
 # homeassistant.components.data_collector
-cs_scrubadub==2.0.2
+cs-scrubadub==2.1.1
 
 # homeassistant.components.scsgate
 scsgate==0.1.0
